Fix to increase stability.

--- a/GreenPAK/fpga-writer/QuartusII/nios2/nios2_system/nios2_system.html
+++ b/GreenPAK/fpga-writer/QuartusII/nios2/nios2_system/nios2_system.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2023.05.02.23:29:47</td>
+    <td class="l">2023.05.03.22:46:04</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -1297,11 +1297,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">AUTO_MM_READ_ADDRESS_MAP</td>
-        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='onchip_memory.s2' start='0x0' end='0x8000' /&gt;&lt;/address-map&gt;</td>
+        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='onchip_memory.s2' start='0x0' end='0xA000' /&gt;&lt;/address-map&gt;</td>
        </tr>
        <tr>
         <td class="parametername">AUTO_MM_READ_ADDRESS_WIDTH</td>
-        <td class="parametervalue">AddressWidth = 15</td>
+        <td class="parametervalue">AddressWidth = 16</td>
        </tr>
        <tr>
         <td class="parametername">AUTO_MM_WRITE_ADDRESS_MAP</td>
@@ -2508,7 +2508,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">instSlaveMapParam</td>
-        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='onchip_memory.s1' start='0x20000' end='0x28000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='nios2_cpu.debug_mem_slave' start='0x40800' end='0x41000' type='altera_nios2_gen2.debug_mem_slave' /&gt;&lt;/address-map&gt;</td>
+        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='onchip_memory.s1' start='0x20000' end='0x2A000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='nios2_cpu.debug_mem_slave' start='0x40800' end='0x41000' type='altera_nios2_gen2.debug_mem_slave' /&gt;&lt;/address-map&gt;</td>
        </tr>
        <tr>
         <td class="parametername">faSlaveMapParam</td>
@@ -2516,7 +2516,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">dataSlaveMapParam</td>
-        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='onchip_memory.s1' start='0x20000' end='0x28000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='nios2_cpu.debug_mem_slave' start='0x40800' end='0x41000' type='altera_nios2_gen2.debug_mem_slave' /&gt;&lt;slave name='pio_dipsw.s1' start='0x41000' end='0x41010' type='altera_avalon_pio.s1' /&gt;&lt;slave name='pio_led.s1' start='0x41010' end='0x41020' type='altera_avalon_pio.s1' /&gt;&lt;slave name='pio_scroll_y.s1' start='0x41020' end='0x41030' type='altera_avalon_pio.s1' /&gt;&lt;slave name='jtag_uart.avalon_jtag_slave' start='0x42000' end='0x42008' type='altera_avalon_jtag_uart.avalon_jtag_slave' /&gt;&lt;slave name='msgdma_tx.csr' start='0x43000' end='0x43020' type='altera_msgdma.csr' /&gt;&lt;slave name='msgdma_tx.descriptor_slave' start='0x44000' end='0x44010' type='altera_msgdma.descriptor_slave' /&gt;&lt;slave name='i2c_0.csr' start='0x45000' end='0x45040' type='altera_avalon_i2c.csr' /&gt;&lt;slave name='fifo_rx.out' start='0x46000' end='0x46008' type='altera_avalon_fifo.out' /&gt;&lt;slave name='fifo_rx.in_csr' start='0x47000' end='0x47020' type='altera_avalon_fifo.in_csr' /&gt;&lt;slave name='slave_mem.s2' start='0x48000' end='0x48100' type='altera_avalon_onchip_memory2.s2' /&gt;&lt;slave name='sysid_qsys_0.control_slave' start='0x4F000' end='0x4F008' type='altera_avalon_sysid_qsys.control_slave' /&gt;&lt;slave name='textram.s1' start='0x50000' end='0x52000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;/address-map&gt;</td>
+        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='onchip_memory.s1' start='0x20000' end='0x2A000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='nios2_cpu.debug_mem_slave' start='0x40800' end='0x41000' type='altera_nios2_gen2.debug_mem_slave' /&gt;&lt;slave name='pio_dipsw.s1' start='0x41000' end='0x41010' type='altera_avalon_pio.s1' /&gt;&lt;slave name='pio_led.s1' start='0x41010' end='0x41020' type='altera_avalon_pio.s1' /&gt;&lt;slave name='pio_scroll_y.s1' start='0x41020' end='0x41030' type='altera_avalon_pio.s1' /&gt;&lt;slave name='jtag_uart.avalon_jtag_slave' start='0x42000' end='0x42008' type='altera_avalon_jtag_uart.avalon_jtag_slave' /&gt;&lt;slave name='msgdma_tx.csr' start='0x43000' end='0x43020' type='altera_msgdma.csr' /&gt;&lt;slave name='msgdma_tx.descriptor_slave' start='0x44000' end='0x44010' type='altera_msgdma.descriptor_slave' /&gt;&lt;slave name='i2c_0.csr' start='0x45000' end='0x45040' type='altera_avalon_i2c.csr' /&gt;&lt;slave name='fifo_rx.out' start='0x46000' end='0x46008' type='altera_avalon_fifo.out' /&gt;&lt;slave name='fifo_rx.in_csr' start='0x47000' end='0x47020' type='altera_avalon_fifo.in_csr' /&gt;&lt;slave name='slave_mem.s2' start='0x48000' end='0x48100' type='altera_avalon_onchip_memory2.s2' /&gt;&lt;slave name='sysid_qsys_0.control_slave' start='0x4F000' end='0x4F008' type='altera_avalon_sysid_qsys.control_slave' /&gt;&lt;slave name='textram.s1' start='0x50000' end='0x52000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;/address-map&gt;</td>
        </tr>
        <tr>
         <td class="parametername">tightlyCoupledDataMaster0MapParam</td>
@@ -2854,7 +2854,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">memorySize</td>
-        <td class="parametervalue">32768</td>
+        <td class="parametervalue">40960</td>
        </tr>
        <tr>
         <td class="parametername">readDuringWriteMode</td>
@@ -2922,11 +2922,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">derived_set_addr_width</td>
-        <td class="parametervalue">13</td>
+        <td class="parametervalue">14</td>
        </tr>
        <tr>
         <td class="parametername">derived_set_addr_width2</td>
-        <td class="parametervalue">13</td>
+        <td class="parametervalue">14</td>
        </tr>
        <tr>
         <td class="parametername">derived_set_data_width</td>
@@ -3015,7 +3015,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">SIZE_VALUE</td>
-        <td class="parametervalue">32768</td>
+        <td class="parametervalue">40960</td>
        </tr>
        <tr>
         <td class="parametername">WRITABLE</td>
@@ -3974,7 +3974,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">timestamp</td>
-        <td class="parametervalue">1683037787</td>
+        <td class="parametervalue">1683121563</td>
        </tr>
        <tr>
         <td class="parametername">deviceFamily</td>
@@ -3999,7 +3999,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">TIMESTAMP</td>
-        <td class="parametervalue">1683037787</td>
+        <td class="parametervalue">1683121563</td>
        </tr>
       </table>
      </td>
@@ -4276,8 +4276,8 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </div>
   <table class="blueBar">
    <tr>
-    <td class="l">generation took 0.02 seconds</td>
-    <td class="r">rendering took 0.12 seconds</td>
+    <td class="l">generation took 0.01 seconds</td>
+    <td class="r">rendering took 0.09 seconds</td>
    </tr>
   </table>
  </body>
